Fixed spacing on website. Also fixed spacing in the logger so the logger message was padded aswell

--- a/version_0.0.1/PathStore/pathstore-admin-panel/frontend/src/Circles.css
+++ b/version_0.0.1/PathStore/pathstore-admin-panel/frontend/src/Circles.css
@@ -89,5 +89,5 @@ span {
 }
 
 #log {
-    white-space: pre-line;
+    white-space: pre;
 }
